--- a/python/mypy.ini
+++ b/python/mypy.ini
@@ -9,3 +9,9 @@ exclude = (?x)(
 
 [mypy-wrapt]
 ignore_missing_imports = True
+
+[mypy-boto3]
+ignore_missing_imports = True
+
+[mypy-botocore.*]
+ignore_missing_imports = True
