--- a/python/tox.ini
+++ b/python/tox.ini
@@ -3,6 +3,7 @@ isolated_build = True
 skipsdist = True
 envlist =
   py3{8,11}-ci-semconv
+  py3{8,11}-ci-{bedrock,bedrock-latest}
   py3{8,11}-ci-{openai,openai-latest}
   py3{8,11}-ci-{llama_index,llama_index-latest}
 
@@ -13,10 +14,13 @@ deps =
   -r dev-requirements.txt
 changedir =
   semconv: openinference-semantic-conventions/
+  bedrock: instrumentation/openinference-instrumentation-bedrock/
   openai: instrumentation/openinference-instrumentation-openai/
   llama_index: instrumentation/openinference-instrumentation-llama-index/
 commands_pre =
   semconv: pip install {toxinidir}/openinference-semantic-conventions
+  bedrock: pip install {toxinidir}/instrumentation/openinference-instrumentation-bedrock[test]
+  bedrock-latest: pip install -U boto3
   openai: pip install {toxinidir}/instrumentation/openinference-instrumentation-openai[test]
   openai-latest: pip install -U openai
   llama_index: pip install {toxinidir}/instrumentation/openinference-instrumentation-llama-index[test]
