add comment to dockerfile

--- a/js/examples/llama-index-express/frontend/Dockerfile
+++ b/js/examples/llama-index-express/frontend/Dockerfile
@@ -14,6 +14,8 @@ FROM base AS builder
 WORKDIR /app
 COPY --from=deps /app/node_modules ./node_modules
 COPY . .
+# Set the chat api url. This environment variable must be set at build time.
+# See https://github.com/vercel/next.js/discussions/44628#discussioncomment-7040424 for more information.
 ENV NEXT_PUBLIC_CHAT_API http://localhost:8000/api/chat
 RUN npm run build
 
