feat: langchain instrumentor

--- a/python/tox.ini
+++ b/python/tox.ini
@@ -7,6 +7,7 @@ envlist =
   py3{8,11}-ci-{openai,openai-latest}
   py3{8,11}-ci-{llama_index,llama_index-latest}
   py3{9,11}-ci-{dspy,dspy-latest}
+  py3{8,11}-ci-{langchain,langchain-latest}
 
 [testenv]
 package = wheel
@@ -19,6 +20,7 @@ changedir =
   openai: instrumentation/openinference-instrumentation-openai/
   llama_index: instrumentation/openinference-instrumentation-llama-index/
   dspy: instrumentation/openinference-instrumentation-dspy/
+  langchain: instrumentation/openinference-instrumentation-langchain/
 commands_pre =
   semconv: pip install {toxinidir}/openinference-semantic-conventions
   bedrock: pip install {toxinidir}/instrumentation/openinference-instrumentation-bedrock[test]
@@ -29,6 +31,8 @@ commands_pre =
   llama_index-latest: pip install -U llama_index
   dspy: pip install {toxinidir}/instrumentation/openinference-instrumentation-dspy[test]
   dspy-latest: pip install -U dspy-ai
+  langchain: pip install {toxinidir}/instrumentation/openinference-instrumentation-langchain[test]
+  langchain-latest: pip install -U langchain
 commands =
   ruff: ruff format . --config {toxinidir}/ruff.toml
   ruff: ruff check . --fix --config {toxinidir}/ruff.toml
