--- a/python/examples/llama-index/frontend/Dockerfile
+++ b/python/examples/llama-index/frontend/Dockerfile
@@ -1,33 +1,81 @@
-# Build Stage
-FROM node:20 AS build
+# # Build Stage
+# FROM node:20 AS build
 
-# Set the working directory
+# # Set the working directory
+# WORKDIR /app
+
+# # Copy package.json and package-lock.json
+# COPY package*.json ./
+
+# # Install dependencies
+# RUN npm install
+
+# # Copy the rest of the code
+# COPY . .
+
+# # Build the application
+# ENV NEXT_PUBLIC_CHAT_API http://localhost:8000/api/chat
+# RUN npm run build 
+
+# # Production Stage
+# FROM node:20-slim
+
+# # Set the working directory
+# WORKDIR /app
+
+# # Copy the rest of your application's code
+# COPY . /app/
+
+# # Install production dependencies
+# COPY package*.json ./
+# RUN npm install --only=production
+
+# # The command to run when the container starts
+# CMD ["npm", "start"]
+
+
+# Adapted from https://github.com/vercel/next.js/blob/fb2d2dd01a5f73ac62c4809b7b9c1490617f8705/examples/with-docker/Dockerfile
+FROM node:18-alpine AS base
+
+# Install dependencies only when needed
+FROM base AS deps
+# Check https://github.com/nodejs/docker-node/tree/b4117f9333da4138b03a546ec926ef50a31506c3#nodealpine to understand why libc6-compat might be needed.
+RUN apk add --no-cache libc6-compat
 WORKDIR /app
-
-# Copy package.json and package-lock.json
 COPY package*.json ./
+RUN npm ci
 
-# Install dependencies
-RUN npm install
-
-# Copy the rest of the code
+# Rebuild the source code only when needed
+FROM base AS builder
+WORKDIR /app
+COPY --from=deps /app/node_modules ./node_modules
 COPY . .
+# Set the chat api url. This environment variable must be set at build time.
+# See https://github.com/vercel/next.js/discussions/44628#discussioncomment-7040424 for more information.
+ENV NEXT_PUBLIC_CHAT_API http://localhost:8000/api/chat
+RUN npm run build
 
-# Build the application
-RUN npm run build 
-
-# Production Stage
-FROM node:20-slim
-
-# Set the working directory
+# Production image, copy all the files and run next
+FROM base AS runner
 WORKDIR /app
-
-# Copy the rest of your application's code
-COPY . /app/
-
-# Install production dependencies
-COPY package*.json ./
-RUN npm install --only=production
-
-# The command to run when the container starts
-CMD ["npm", "start"]
+ENV NODE_ENV production
+# Uncomment the following line in case you want to disable telemetry during runtime.
+# ENV NEXT_TELEMETRY_DISABLED 1
+RUN addgroup --system --gid 1001 nodejs
+RUN adduser --system --uid 1001 nextjs
+COPY --from=builder /app/public ./public
+# Set the correct permission for prerender cache
+RUN mkdir .next
+RUN chown nextjs:nodejs .next
+# Automatically leverage output traces to reduce image size
+# https://nextjs.org/docs/advanced-features/output-file-tracing
+COPY --from=builder --chown=nextjs:nodejs /app/.next/standalone ./
+COPY --from=builder --chown=nextjs:nodejs /app/.next/static ./.next/static
+USER nextjs
+EXPOSE 3000
+ENV PORT 3000
+# set hostname to localhost
+ENV HOSTNAME "0.0.0.0"
+# server.js is created by next build from the standalone output
+# https://nextjs.org/docs/pages/api-reference/next-config-js/output
+CMD ["node", "server.js"]
