--- a/python/examples/llama-index/compose.yml
+++ b/python/examples/llama-index/compose.yml
@@ -11,8 +11,10 @@ services:
       - OPENAI_API_KEY=${OPENAI_API_KEY}
       - COLLECTOR_ENDPOINT=http://phoenix:6006/v1/traces
       - PROD_CORS_ORIGIN=http://localhost:3000
+      # Set INSTRUMENT_LLAMA_INDEX=false to disable instrumentation
+      - INSTRUMENT_LLAMA_INDEX=true
     healthcheck:
-      test: ["CMD", "wget", "--spider", "http://localhost:8000"]
+      test: ["CMD", "wget", "--spider", "http://0.0.0.0:8000/api/chat/healthcheck"]
       interval: 5s
       timeout: 1s
       retries: 5
