--- a/python/instrumentation/openinference-instrumentation-langchain/pyproject.toml
+++ b/python/instrumentation/openinference-instrumentation-langchain/pyproject.toml
@@ -33,13 +33,15 @@ dependencies = [
 
 [project.optional-dependencies]
 instruments = [
-  "langchain >= 0.1.0",
+  "langchain_core >= 0.1.0",
 ]
 test = [
+  "langchain_core == 0.1.8",
   "langchain == 0.1.0",
+  "langchain_openai == 0.0.2",
+  "langchain-community == 0.0.10",
   "opentelemetry-sdk",
   "openinference-instrumentation-openai",
-  "langchain_openai",
   "respx",
 ]
 
