--- a/python/tox.ini
+++ b/python/tox.ini
@@ -8,6 +8,7 @@ envlist =
   py3{8,11}-ci-{llama_index,llama_index-latest}
   py3{9,11}-ci-{dspy,dspy-latest}
   py3{8,11}-ci-{langchain,langchain-latest}
+  py3{8,11}-mypy-langchain_core
 
 [testenv]
 package = wheel
@@ -21,6 +22,7 @@ changedir =
   llama_index: instrumentation/openinference-instrumentation-llama-index/
   dspy: instrumentation/openinference-instrumentation-dspy/
   langchain: instrumentation/openinference-instrumentation-langchain/
+  langchain_core: instrumentation/openinference-instrumentation-langchain/src
 commands_pre =
   semconv: pip install {toxinidir}/openinference-semantic-conventions
   bedrock: pip install {toxinidir}/instrumentation/openinference-instrumentation-bedrock[test]
@@ -32,7 +34,9 @@ commands_pre =
   dspy: pip install {toxinidir}/instrumentation/openinference-instrumentation-dspy[test]
   dspy-latest: pip install -U dspy-ai
   langchain: pip install {toxinidir}/instrumentation/openinference-instrumentation-langchain[test]
-  langchain-latest: pip install -U langchain
+  langchain-latest: pip install -U langchain langchain_core langchain_openai langchain_community
+  langchain_core: pip install {toxinidir}/instrumentation/openinference-instrumentation-langchain
+  langchain_core: pip install "langchain_core==0.1.0"
 commands =
   ruff: ruff format . --config {toxinidir}/ruff.toml
   ruff: ruff check . --fix --config {toxinidir}/ruff.toml
