--- a/python/tox.ini
+++ b/python/tox.ini
@@ -8,7 +8,7 @@ envlist =
   py3{8,11}-ci-{llama_index,llama_index-latest}
   py3{9,11}-ci-{dspy,dspy-latest}
   py3{8,11}-ci-{langchain,langchain-latest}
-  py3{8,11}-mypy-langchain_core
+  py38-mypy-langchain_core
 
 [testenv]
 package = wheel
@@ -35,8 +35,7 @@ commands_pre =
   dspy-latest: pip install -U dspy-ai
   langchain: pip install {toxinidir}/instrumentation/openinference-instrumentation-langchain[test]
   langchain-latest: pip install -U langchain langchain_core langchain_openai langchain_community
-  langchain_core: pip install {toxinidir}/instrumentation/openinference-instrumentation-langchain
-  langchain_core: pip install "langchain_core==0.1.0"
+  langchain_core: pip install {toxinidir}/instrumentation/openinference-instrumentation-langchain[type-check]
 commands =
   ruff: ruff format . --config {toxinidir}/ruff.toml
   ruff: ruff check . --fix --config {toxinidir}/ruff.toml
