--- a/python/examples/llama-index/backend/pyproject.toml
+++ b/python/examples/llama-index/backend/pyproject.toml
@@ -12,6 +12,9 @@ uvicorn = { extras = ["standard"], version = "^0.23.2" }
 llama-index = "^0.9.19"
 pypdf = "^3.17.0"
 python-dotenv = "^1.0.0"
+openinference-semantic-conventions = "*"
+openinference-instrumentation-llama-index = "*"
+opentelemetry-exporter-otlp  = "^1.22.0"
 
 
 [build-system]
