feat: langchain instrumentor (#138)

--- a/release-please-config.json
+++ b/release-please-config.json
@@ -25,6 +25,10 @@
         "python/instrumentation/openinference-instrumentation-bedrock": {
             "package-name": "python-openinference-instrumentation-bedrock",
             "release-type": "python"
+        },
+        "python/instrumentation/openinference-instrumentation-langchain": {
+            "package-name": "python-openinference-instrumentation-langchain",
+            "release-type": "python"
         }
     }
 }
