Ensure OpenAI key is passed via args to the build step

--- a/python/examples/llama-index/backend/Dockerfile
+++ b/python/examples/llama-index/backend/Dockerfile
@@ -7,20 +7,26 @@ RUN apt-get update \
     && apt-get clean \
     && rm -rf /var/lib/apt/lists/*
 
-WORKDIR /app
+WORKDIR /llama
 
 # Install poetry
 RUN pip install poetry
 
 # Copy the pyproject.toml (and possibly poetry.lock) file to the container
-COPY pyproject.toml poetry.lock* /app/
+COPY pyproject.toml poetry.lock* /llama/
+
+ARG OPENAI_API_KEY
+ENV OPENAI_API_KEY=$OPENAI_API_KEY
 
 # Install dependencies via poetry
 RUN poetry config virtualenvs.create false \
 && poetry install --only main
 
- # Copy the rest of your application's code
-COPY . /app/
+# Copy the rest of your application's code
+COPY . /llama/
+
+# Build indexes
+RUN ["python", "-m", "app.engine.generate"]
 
 EXPOSE 8000
 
