--- a/python/instrumentation/openinference-instrumentation-langchain/pyproject.toml
+++ b/python/instrumentation/openinference-instrumentation-langchain/pyproject.toml
@@ -27,7 +27,7 @@ dependencies = [
   "opentelemetry-api",
   "opentelemetry-instrumentation",
   "opentelemetry-semantic-conventions",
-  "openinference-semantic-conventions",
+  "openinference-semantic-conventions>=0.1.3",
 ]
 
 [project.optional-dependencies]
@@ -61,3 +61,21 @@ include = [
 
 [tool.hatch.build.targets.wheel]
 packages = ["src/openinference"]
+
+[tool.mypy]
+plugins = []
+disallow_untyped_calls = true
+disallow_untyped_defs = true
+disallow_incomplete_defs  = true
+strict = true
+exclude = [
+  "dist/",
+]
+
+[tool.ruff]
+exclude = [".git", "__pycache__", "*_pb2.py*", "*.pyi"]
+ignore-init-module-imports = true
+line-length = 100
+select = ["E", "F", "W", "I"]
+target-version = "py38"
+
