--- a/python/instrumentation/openinference-instrumentation-llama-index/examples/requirements.txt
+++ b/python/instrumentation/openinference-instrumentation-llama-index/examples/requirements.txt
@@ -1,4 +1,5 @@
-llama-index >= 0.9.14
+llama-index >= 0.10.0
+llama-index-vector-stores-chroma
 openinference-instrumentation-llama-index
 opentelemetry-sdk
 opentelemetry-exporter-otlp
