--- a/python/instrumentation/openinference-instrumentation-openai/pyproject.toml
+++ b/python/instrumentation/openinference-instrumentation-openai/pyproject.toml
@@ -6,7 +6,7 @@ build-backend = "hatchling.build"
 name = "openinference-instrumentation-openai"
 dynamic = ["version"]
 description = "OpenInference OpenAI Instrumentation"
-readme = "README.rst"
+readme = "README.md"
 license = "Apache-2.0"
 requires-python = ">=3.8, <3.12"
 authors = [
