format and update tox.ini

--- a/python/tox.ini
+++ b/python/tox.ini
@@ -37,8 +37,8 @@ commands_pre =
   langchain-latest: pip install -U langchain langchain_core langchain_openai langchain_community
   langchain_core: pip install {toxinidir}/instrumentation/openinference-instrumentation-langchain[type-check]
 commands =
-  ruff: ruff format . --config {toxinidir}/ruff.toml
-  ruff: ruff check . --fix --config {toxinidir}/ruff.toml
+  ruff: ruff format {posargs:.} --config {toxinidir}/ruff.toml
+  ruff: ruff check {posargs:.} --fix --config {toxinidir}/ruff.toml
   mypy: mypy --config-file {toxinidir}/mypy.ini {posargs:.}
   test: pytest {posargs:tests}
   ci: ruff format . --diff --config {toxinidir}/ruff.toml
