add support for DSPy's Google model class

--- a/python/instrumentation/openinference-instrumentation-dspy/pyproject.toml
+++ b/python/instrumentation/openinference-instrumentation-dspy/pyproject.toml
@@ -36,6 +36,7 @@ instruments = [
 ]
 test = [
   "dspy-ai==2.3.4",
+  "google-generativeai",
   "opentelemetry-sdk",
   "responses",
   "respx==0.20.2",
