add typing extensions as a direct dependency

--- a/python/instrumentation/openinference-instrumentation-dspy/pyproject.toml
+++ b/python/instrumentation/openinference-instrumentation-dspy/pyproject.toml
@@ -28,6 +28,7 @@ dependencies = [
   "opentelemetry-semantic-conventions",
   "openinference-semantic-conventions",
   "wrapt",
+  "typing-extensions",
 ]
 
 [project.optional-dependencies]
