--- a/python/instrumentation/openinference-instrumentation-llama-index/pyproject.toml
+++ b/python/instrumentation/openinference-instrumentation-llama-index/pyproject.toml
@@ -39,6 +39,7 @@ instruments = [
 ]
 test = [
   "llama-index == 0.10.5",
+  "llama-index-core == 0.10.5",
   "llama-index-llms-openai",
   "opentelemetry-sdk",
   "respx",
