--- a/python/tox.ini
+++ b/python/tox.ini
@@ -4,6 +4,7 @@ skipsdist = True
 envlist =
   py3{8,12}-ci-semconv
   py3{8,12}-ci-{bedrock,bedrock-latest}
+  py3{8,12}-ci-{mistralai,mistralai-latest}
   py3{8,12}-ci-{openai,openai-latest}
   py3{8,12}-ci-{llama_index,llama_index-latest}
   py3{9,12}-ci-{dspy,dspy-latest}
@@ -18,6 +19,7 @@ deps =
 changedir =
   semconv: openinference-semantic-conventions/
   bedrock: instrumentation/openinference-instrumentation-bedrock/
+  mistralai: instrumentation/openinference-instrumentation-mistralai/
   openai: instrumentation/openinference-instrumentation-openai/
   llama_index: instrumentation/openinference-instrumentation-llama-index/
   dspy: instrumentation/openinference-instrumentation-dspy/
@@ -27,6 +29,8 @@ commands_pre =
   semconv: pip install {toxinidir}/openinference-semantic-conventions
   bedrock: pip install {toxinidir}/instrumentation/openinference-instrumentation-bedrock[test]
   bedrock-latest: pip install -U boto3
+  mistralai: pip install {toxinidir}/instrumentation/openinference-instrumentation-mistralai[test]
+  mistralai-latest: pip install -U mistralai
   openai: pip install {toxinidir}/instrumentation/openinference-instrumentation-openai[test]
   openai-latest: pip install -U openai
   llama_index: pip install {toxinidir}/instrumentation/openinference-instrumentation-llama-index[test]
