add pytest-asyncio as a test dep

--- a/python/instrumentation/openinference-instrumentation-mistralai/pyproject.toml
+++ b/python/instrumentation/openinference-instrumentation-mistralai/pyproject.toml
@@ -36,14 +36,12 @@ dependencies = [
 instruments = [
   "mistralai",
 ]
-dev = [
-  "pytest",
-]
 test = [
   "mistralai",
   "opentelemetry-sdk",
   "opentelemetry-instrumentation-httpx",
   "respx",
+  "pytest-asyncio",
 ]
 
 [project.urls]
