--- a/python/tox.ini
+++ b/python/tox.ini
@@ -3,6 +3,7 @@ isolated_build = True
 skipsdist = True
 envlist =
   py3{8,12}-ci-semconv
+  py3{8,12}-ci-instrumentation
   py3{8,12}-ci-{bedrock,bedrock-latest}
   py3{9,12}-ci-{mistralai,mistralai-latest}
   py3{8,12}-ci-{openai,openai-latest}
@@ -18,6 +19,7 @@ deps =
   -r dev-requirements.txt
 changedir =
   semconv: openinference-semantic-conventions/
+  instrumentation: openinference-instrumentation/
   bedrock: instrumentation/openinference-instrumentation-bedrock/
   mistralai: instrumentation/openinference-instrumentation-mistralai/
   openai: instrumentation/openinference-instrumentation-openai/
@@ -27,6 +29,7 @@ changedir =
   langchain_core: instrumentation/openinference-instrumentation-langchain/src
 commands_pre =
   semconv: pip install {toxinidir}/openinference-semantic-conventions
+  instrumentation: pip install {toxinidir}/openinference-instrumentation
   bedrock: pip install {toxinidir}/instrumentation/openinference-instrumentation-bedrock[test]
   bedrock-latest: pip install -U boto3
   mistralai: pip install {toxinidir}/instrumentation/openinference-instrumentation-mistralai[test]
