--- a/js/examples/openai/package.json
+++ b/js/examples/openai/package.json
@@ -13,10 +13,16 @@
   "license": "Apache-2.0",
   "dependencies": {
     "@arizeai/openinference-instrumentation-openai": "^0.0.2",
+    "@arizeai/openinference-semantic-conventions": "^0.2.0",
     "@opentelemetry/exporter-trace-otlp-http": "^0.46.0",
     "@opentelemetry/exporter-trace-otlp-proto": "^0.46.0",
     "@opentelemetry/resources": "^1.19.0",
     "@opentelemetry/sdk-trace-node": "^1.19.0",
+    "body-parser": "^1.20.2",
+    "express": "^4.19.2",
     "openai": "^4.24.1"
+  },
+  "devDependencies": {
+    "@types/express": "^4.17.21"
   }
 }
