add streaming example

--- a/js/examples/openai/package.json
+++ b/js/examples/openai/package.json
@@ -19,6 +19,7 @@
     "@opentelemetry/resources": "^1.19.0",
     "@opentelemetry/sdk-trace-node": "^1.19.0",
     "body-parser": "^1.20.2",
+    "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "openai": "^4.24.1"
   },
