--- a/.github/workflows/typescript-CI.yaml
+++ b/.github/workflows/typescript-CI.yaml
@@ -2,7 +2,7 @@ name: Typescript CI
 
 on:
     push:
-        branches: [main]
+        branches: [main, langchainjs]
     pull_request:
         paths:
             - "js/**"
