update pckage description

--- a/js/packages/openinference-instrumentation-langchain/package.json
+++ b/js/packages/openinference-instrumentation-langchain/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@arizeai/openinference-instrumentation-langchain",
   "version": "0.0.0",
-  "description": "OpenInference Instrumentation Langchain",
+  "description": "OpenInference Instrumentation for LangChain.js",
   "private": false,
   "main": "dist/src/index.js",
   "module": "dist/esm/index.js",
