--- a/js/packages/openinference-instrumentation-openai/package.json
+++ b/js/packages/openinference-instrumentation-openai/package.json
@@ -21,6 +21,7 @@
   "dependencies": {
     "@arizeai/openinference-semantic-conventions": "workspace:*",
     "@opentelemetry/api": "^1.7.0",
+    "@opentelemetry/core": "^1.23.0",
     "@opentelemetry/instrumentation": "^0.46.0"
   },
   "keywords": [],
