--- a/js/packages/openinference-instrumentation-langchain/tsconfig.json
+++ b/js/packages/openinference-instrumentation-langchain/tsconfig.json
@@ -2,9 +2,10 @@
   "extends": "../../tsconfig.base.json",
   "compilerOptions": {
     "outDir": "dist",
-    "rootDir": "."
+    "rootDir": ".",
+    "types": ["node", "jest"],
   },
   "files": [],
-  "include": ["src/**/*.ts", "test/**/*.ts"],
-  "references": []
+  "include": ["src/**/*.ts", "test/**/*.ts", "examples/**/*.ts"],
+  "references": [],
 }
