--- a/js/packages/openinference-instrumentation-langchain/package.json
+++ b/js/packages/openinference-instrumentation-langchain/package.json
@@ -28,12 +28,14 @@
   "dependencies": {
     "@arizeai/openinference-semantic-conventions": "workspace:*",
     "@opentelemetry/api": "^1.7.0",
+    "@opentelemetry/core": "^1.23.0",
     "@opentelemetry/exporter-trace-otlp-proto": "^0.50.0",
     "@opentelemetry/instrumentation": "^0.46.0",
     "@opentelemetry/resources": "^1.19.0",
     "@opentelemetry/semantic-conventions": "^1.19.0"
   },
   "devDependencies": {
+    "@langchain/community": "^0.0.44",
     "@langchain/core": "^0.1.52",
     "@langchain/openai": "^0.0.25",
     "@opentelemetry/sdk-trace-base": "^1.19.0",
