--- a/python/examples/llama-index/frontend/tsconfig.json
+++ b/python/examples/llama-index/frontend/tsconfig.json
@@ -24,5 +24,10 @@
     "forceConsistentCasingInFileNames": true
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
-  "exclude": ["node_modules"]
+  "exclude": ["node_modules"],
+  "ts-node": {
+    "compilerOptions": {
+      "module": "commonjs"
+    }
+  }
 }
