prettier for json

--- a/js/packages/openinference-instrumentation-langchain/tsconfig.json
+++ b/js/packages/openinference-instrumentation-langchain/tsconfig.json
@@ -3,9 +3,9 @@
   "compilerOptions": {
     "outDir": "dist",
     "rootDir": ".",
-    "types": ["node", "jest"],
+    "types": ["node", "jest"]
   },
   "files": [],
   "include": ["src/**/*.ts"],
-  "references": [],
+  "references": []
 }
