--- a/js/packages/openinference-instrumentation-langchain/package.json
+++ b/js/packages/openinference-instrumentation-langchain/package.json
@@ -26,7 +26,10 @@
   "author": "oss-devs@arize.com",
   "license": "Apache-2.0",
   "dependencies": {
-    "@arizeai/openinference-semantic-conventions": "workspace:*"
+    "@arizeai/openinference-semantic-conventions": "workspace:*",
+    "@opentelemetry/api": "^1.7.0",
+    "@opentelemetry/core": "^1.23.0",
+    "@opentelemetry/instrumentation": "^0.46.0"
   },
   "devDependencies": {
     "@langchain/community": "^0.0.44",
@@ -39,10 +42,7 @@
     "dotenv": "^16.4.5",
     "jest": "^29.7.0",
     "langchain": "^0.1.30",
-    "@opentelemetry/api": "^1.7.0",
-    "@opentelemetry/core": "^1.23.0",
     "@opentelemetry/exporter-trace-otlp-proto": "^0.50.0",
-    "@opentelemetry/instrumentation": "^0.46.0",
     "@opentelemetry/resources": "^1.19.0",
     "@opentelemetry/semantic-conventions": "^1.19.0"
   }
