--- a/js/packages/openinference-instrumentation-langchain/package.json
+++ b/js/packages/openinference-instrumentation-langchain/package.json
@@ -26,12 +26,14 @@
   "author": "oss-devs@arize.com",
   "license": "Apache-2.0",
   "dependencies": {
-    "@arizeai/openinference-semantic-conventions": "workspace:*"
+    "@arizeai/openinference-semantic-conventions": "workspace:*",
+    "@opentelemetry/instrumentation": "^0.46.0",
+    "@opentelemetry/api": "^1.7.0",
+    "@opentelemetry/core": "^1.23.0"
   },
   "devDependencies": {
-    "@langchain/community": "^0.0.44",
-    "@langchain/core": "^0.1.52",
     "@langchain/openai": "^0.0.25",
+    "@langchain/core": "^0.1.52",
     "@opentelemetry/sdk-trace-base": "^1.19.0",
     "@opentelemetry/sdk-trace-node": "^1.19.0",
     "@types/jest": "^29.5.11",
@@ -41,9 +43,6 @@
     "langchain": "^0.1.30",
     "@opentelemetry/exporter-trace-otlp-proto": "^0.50.0",
     "@opentelemetry/resources": "^1.19.0",
-    "@opentelemetry/semantic-conventions": "^1.19.0",
-    "@opentelemetry/api": "^1.7.0",
-    "@opentelemetry/core": "^1.23.0",
-    "@opentelemetry/instrumentation": "^0.46.0"
+    "@opentelemetry/semantic-conventions": "^1.19.0"
   }
 }
