--- a/js/packages/openinference-instrumentation-langchain/package.json
+++ b/js/packages/openinference-instrumentation-langchain/package.json
@@ -7,21 +7,42 @@
   "module": "dist/esm/index.js",
   "esnext": "dist/esnext/index.js",
   "types": "dist/src/index.d.ts",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/Arize-ai/openinference.git"
+  },
   "scripts": {
     "prebuild": "rimraf dist & pnpm run version:update",
     "build": "tsc --build tsconfig.json tsconfig.esm.json tsconfig.esnext.json",
     "version:update": "../../scripts/version-update.js",
-    "type:check": "tsc --noEmit"
+    "type:check": "tsc --noEmit",
+    "test": "jest --setupFiles dotenv/config"
   },
   "keywords": [],
+  "files": [
+    "dist",
+    "src"
+  ],
   "author": "oss-devs@arize.com",
   "license": "Apache-2.0",
   "dependencies": {
     "@arizeai/openinference-semantic-conventions": "workspace:*",
+    "@opentelemetry/instrumentation": "^0.46.0",
     "@opentelemetry/api": "^1.7.0",
-    "@opentelemetry/instrumentation": "^0.46.0"
+    "@opentelemetry/core": "^1.23.0"
   },
   "devDependencies": {
-    "langchain": "^0.1.30"
+    "@langchain/openai": "^0.0.25",
+    "@langchain/core": "^0.1.52",
+    "@opentelemetry/sdk-trace-base": "^1.19.0",
+    "@opentelemetry/sdk-trace-node": "^1.19.0",
+    "@types/jest": "^29.5.11",
+    "@types/node": "^20.12.4",
+    "dotenv": "^16.4.5",
+    "jest": "^29.7.0",
+    "langchain": "^0.1.30",
+    "@opentelemetry/exporter-trace-otlp-proto": "^0.50.0",
+    "@opentelemetry/resources": "^1.19.0",
+    "@opentelemetry/semantic-conventions": "^1.19.0"
   }
 }
