--- a/js/packages/openinference-instrumentation-langchain/package.json
+++ b/js/packages/openinference-instrumentation-langchain/package.json
@@ -27,22 +27,23 @@
   "license": "Apache-2.0",
   "dependencies": {
     "@arizeai/openinference-semantic-conventions": "workspace:*",
-    "@opentelemetry/instrumentation": "^0.46.0",
     "@opentelemetry/api": "^1.7.0",
-    "@opentelemetry/core": "^1.23.0"
+    "@opentelemetry/core": "^1.23.0",
+    "@opentelemetry/instrumentation": "^0.46.0"
   },
   "devDependencies": {
-    "@langchain/openai": "^0.0.25",
     "@langchain/core": "^0.1.52",
+    "@langchain/openai": "^0.0.25",
+    "@opentelemetry/exporter-trace-otlp-proto": "^0.50.0",
+    "@opentelemetry/resources": "^1.19.0",
     "@opentelemetry/sdk-trace-base": "^1.19.0",
     "@opentelemetry/sdk-trace-node": "^1.19.0",
+    "@opentelemetry/semantic-conventions": "^1.19.0",
     "@types/jest": "^29.5.11",
     "@types/node": "^20.12.4",
     "dotenv": "^16.4.5",
     "jest": "^29.7.0",
     "langchain": "^0.1.30",
-    "@opentelemetry/exporter-trace-otlp-proto": "^0.50.0",
-    "@opentelemetry/resources": "^1.19.0",
-    "@opentelemetry/semantic-conventions": "^1.19.0"
+    "openai": "^4.24.1"
   }
 }
