docs: new llama-index example (#374)

--- a/python/examples/llama-index/compose.yaml
+++ b/python/examples/llama-index/compose.yaml
@@ -1,6 +1,6 @@
 services:
   phoenix:
-    image: arizephoenix/phoenix:latest
+    image: arizephoenix/phoenix:version-3.21.0
     ports:
       - "6006:6006"
   backend:
@@ -15,8 +15,6 @@ services:
       - OPENAI_API_KEY=${OPENAI_API_KEY}
       - COLLECTOR_ENDPOINT=http://phoenix:6006/v1/traces
       - PROD_CORS_ORIGIN=http://localhost:3000
-      # Set INSTRUMENT_LLAMA_INDEX=false to disable instrumentation
-      - INSTRUMENT_LLAMA_INDEX=true
     healthcheck:
       test: ["CMD", "wget", "--spider", "http://0.0.0.0:8000/api/chat/healthcheck"]
       interval: 5s
