Fix networking when using `docker compose`

--- a/python/examples/llama-index/frontend/Dockerfile
+++ b/python/examples/llama-index/frontend/Dockerfile
@@ -6,6 +6,8 @@ WORKDIR /app
 COPY package.json package-lock.* ./
 RUN npm install
 
+ENV NEXT_PUBLIC_CHAT_API http://localhost:8000/api/chat
+
 # Build the application
 COPY . .
 RUN npm run build
