--- a/js/packages/openinference-instrumentation-langchain/tsconfig.json
+++ b/js/packages/openinference-instrumentation-langchain/tsconfig.json
@@ -6,6 +6,6 @@
     "types": ["node", "jest"]
   },
   "files": [],
-  "include": ["src/**/*.ts"],
+  "include": ["src/**/*.ts", "examples/**/*.ts"],
   "references": []
 }
