--- a/python/openinference-instrumentation/pyproject.toml
+++ b/python/openinference-instrumentation/pyproject.toml
@@ -59,3 +59,20 @@ explicit_package_bases = true
 exclude = [
   "src/openinference/instrumentation/*/*",
 ]
+
+[tool.ruff]
+exclude= [
+  "src/openinference/instrumentation/*/*",
+]
+line-length = 100
+target-version = "py38"
+
+[tool.ruff.lint.per-file-ignores]
+"*.ipynb" = ["E402", "E501"]
+
+[tool.ruff.lint]
+ignore-init-module-imports = true
+select = ["E", "F", "W", "I"]
+
+[tool.ruff.lint.isort]
+force-single-line = false
