--- a/python/tox.ini
+++ b/python/tox.ini
@@ -44,11 +44,11 @@ commands_pre =
   langchain-latest: pip install -U langchain langchain_core langchain_openai langchain_community
   langchain_core: pip install {toxinidir}/instrumentation/openinference-instrumentation-langchain[type-check]
 commands =
-  ruff: ruff format {posargs:.} --config {toxinidir}/ruff.toml
-  ruff: ruff check {posargs:.} --fix --config {toxinidir}/ruff.toml
+  ruff: ruff format {posargs:.}
+  ruff: ruff check {posargs:.} --fix
   mypy: mypy {posargs:.}
   test: pytest {posargs:tests}
-  ci: ruff format . --diff --config {toxinidir}/ruff.toml
-  ci: ruff check . --no-fix --config {toxinidir}/ruff.toml
+  ci: ruff format . --diff
+  ci: ruff check . --no-fix
   ci: mypy .
   ci: pytest tests
