--- a/python/examples/dspy-rag-fastapi/frontend/pyproject.toml
+++ b/python/examples/dspy-rag-fastapi/frontend/pyproject.toml
@@ -2,7 +2,7 @@
 name = "dspy-rag-frontend"
 version = "0.1.0"
 description = "Streamlit frontend for DSPy"
-authors = ["diicell, "mikeldking"]
+authors = ["diicell", "mikeldking"]
 license = "MIT"
 readme = "README.md"
 
