--- a/.github/workflows/python-CI.yaml
+++ b/.github/workflows/python-CI.yaml
@@ -2,7 +2,7 @@ name: Python CI
 
 on:
     push:
-        branches: [main]
+        branches: [main, sessions]
     pull_request:
         paths:
             - "python/**"
