--- a/python/examples/dspy-rag-fastapi/backend/Dockerfile
+++ b/python/examples/dspy-rag-fastapi/backend/Dockerfile
@@ -23,8 +23,7 @@ RUN poetry config virtualenvs.create false \
 # Copy the rest of your application's code
 COPY . /rag/
 
-# Populate Chroma db
-# This is done outside of the build
+# Populate Weaviate
 # RUN ["python", "-m", "app.utils.load"]
 
 EXPOSE 8000
