--- a/python/examples/dspy-rag-fastapi/compose.yml
+++ b/python/examples/dspy-rag-fastapi/compose.yml
@@ -14,6 +14,7 @@ services:
       # Set INSTRUMENT_DSPY=false to disable instrumentation
       - INSTRUMENT_DSPY=true
       - OPENAI_API_KEY=${OPENAI_API_KEY}
+      - CO_API_KEY=${CO_API_KEY}
   frontend:
     build:
       context: ./frontend
