--- a/python/examples/dspy-rag-fastapi/backend/pyproject.toml
+++ b/python/examples/dspy-rag-fastapi/backend/pyproject.toml
@@ -10,7 +10,7 @@ python = ">=3.10, <3.11"
 fastapi = "^0.110.0"
 uvicorn = {extras = ["standard"], version = "^0.27.1"}
 arize-phoenix = "^3.4.1"
-openinference-instrumentation-dspy = "^0.1.2"
+openinference-instrumentation-dspy = "^0.1.4"
 opentelemetry-exporter-otlp = "^1.23.0"
 weaviate-client = "^4.5.6"
 structlog = "^24.1.0"
@@ -18,6 +18,7 @@ openai = "^1.23.5"
 tokenizers = "^0.19.1"
 openinference-semantic-conventions = "^0.1.5"
 dspy = {git = "https://github.com/stanfordnlp/dspy.git"}
+cohere = "^5.3.3"
 
 
 [build-system]
