Add tests, dependencies and feedback

--- a/python/openinference-instrumentation/pyproject.toml
+++ b/python/openinference-instrumentation/pyproject.toml
@@ -26,6 +26,7 @@ classifiers = [
 ]
 dependencies = [
   "opentelemetry-api",
+  "openinference-semantic-conventions",
 ]
 
 [project.optional-dependencies]
