fix: require minimum version of openinference-semantic-conventions

--- a/python/openinference-instrumentation/pyproject.toml
+++ b/python/openinference-instrumentation/pyproject.toml
@@ -26,7 +26,7 @@ classifiers = [
 ]
 dependencies = [
   "opentelemetry-api",
-  "openinference-semantic-conventions",
+  "openinference-semantic-conventions>=0.1.6",
 ]
 
 [project.optional-dependencies]
