update llama-index example

--- a/python/examples/llama-index/backend/pyproject.toml
+++ b/python/examples/llama-index/backend/pyproject.toml
@@ -10,9 +10,9 @@ readme = "README.md"
 python = "^3.11,<3.12"
 fastapi = "^0.109.1"
 python-dotenv = "^1.0.0"
-llama-index = "0.10.15"
-llama-index-core = "0.10.15"
-llama-index-agent-openai = "0.1.5"
+llama-index = "^0.10.37"
+llama-index-core = "^0.10.37"
+llama-index-agent-openai = "^0.1.5"
 openinference-semantic-conventions = "*"
 openinference-instrumentation-llama-index = "^1.2.1"
 opentelemetry-exporter-otlp = "^1.24.0"
