feat: support llama-index new instrumentation paradigm under feature flag `use_experimental_instrumentation` (#462)

--- a/python/instrumentation/openinference-instrumentation-llama-index/pyproject.toml
+++ b/python/instrumentation/openinference-instrumentation-llama-index/pyproject.toml
@@ -36,11 +36,11 @@ dependencies = [
 
 [project.optional-dependencies]
 instruments = [
-  "llama-index >= 0.10.5",
+  "llama-index-core >= 0.10.5",
 ]
 test = [
-  "llama-index == 0.10.5",
-  "llama-index-core == 0.10.10",
+  "llama-index == 0.10.36",
+  "llama-index-core == 0.10.36",
   "llama-index-llms-openai",
   "opentelemetry-sdk",
   "respx",
